# UMANS-with-SPH

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CrossingAndBottleneck-SPH.xml
examples/agents/: 1to1-135Degrees.xml  1to1-180Degrees.xml  1to1-90Degrees.xml  1to10-180Degrees.xml  1to10-45Degrees.xml  1to10-90Degrees.xml  25to25-180Degrees.xml  25to25-90Degrees.xml  25to25-Formation-90Degrees.xml  Circle10.xml  Circle15.xml  Circle25.xml  Circle5.xml  Circle50.xml  CrossingAndBottleneck.xml
examples/obstacles/: CrossingAndBottleneck.xml
examples/policies/: SPH.xml
src/ConsoleApplication/: main.cpp
src/Engine/CostFunctions/: FOEAvoidance.cpp  FOEAvoidance.h  ForceBasedFunction.cpp  ForceBasedFunction.h  GenericCost.cpp  GenericCost.h  GoalReachingForce.cpp  GoalReachingForce.h  Karamouzas.cpp  Karamouzas.h  Moussaid.cpp  Moussaid.h  ORCA.cpp  ORCA.h  ObjectInteractionForces.cpp  ObjectInteractionForces.h  PLEdestrians.cpp  PLEdestrians.h  Paris.cpp  Paris.h  PowerLaw.cpp  PowerLaw.h  RVO.cpp  RVO.h  RandomFunction.cpp  RandomFunction.h  SPH.cpp  SPH.h  SocialForcesAvoidance.cpp  SocialForcesAvoidance.h  TtcaDca.cpp  TtcaDca.h  VanToll.cpp  VanToll.h
src/Engine/core/: AgentKDTree.cpp  AgentKDTree.h  agent.cpp  agent.h  costFunction.cpp  costFunction.h  costFunctionFactory.cpp  costFunctionFactory.h  costFunctionParameters.cpp  costFunctionParameters.h  crowdSimulator.cpp  crowdSimulator.h  policy.cpp  policy.h  worldBase.cpp  worldBase.h  worldInfinite.cpp  worldInfinite.h  worldPlanar.cpp  worldPlanar.h  worldToric.cpp  worldToric.h
src/Engine/tools/: Color.h  HelperFunctions.cpp  HelperFunctions.h  Matrix.h  Polygon2D.cpp  Polygon2D.h  Trajectory.h  TrajectoryCSVReader.cpp  TrajectoryCSVReader.h  TrajectoryCSVWriter.cpp  TrajectoryCSVWriter.h  localsearch.cpp  localsearch.h  vector2D.h
src/GUI/: UMANSOpenGLWidget.cpp  UMANSOpenGLWidget.h  UMANSQtGuiApplication.cpp  UMANSQtGuiApplication.h  UMANSQtGuiApplication.ui  VisualizationData.h  main.cpp
test/: ConfigGenerator.py  Dispositioner.py  Generator.py  TestLocalSearch.cpp
